Complete TRADER/OWN evaluation parity and reset schema
Unify proposal and exact-position assessments around one canonical receipt, stance and participation analysis, lane-separated portfolio impact, and exact aggregate book context. Replace the entire pre-release Flyway history with one fingerprinted current schema, reject older database shapes, and clone one initialized test template per fork so the complete backend suite runs in under a minute.